# llm-wasm-sandbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  DASH.md  FIXES.md  HARDENING.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SETUP_COMPLETE.md  JAVASCRIPT.md  LICENSE  MCP.md  PACKAGE_TESTING_RESULTS.md  PYPI_CHECKLIST.md  README.md  SECURITY_AUDIT_JS.md  benchmark_performance.py  benchmark_results_sandbox_utils.json  benchmark_sandbox_utils.py  benchmark_session_performance.py  demo.py  demo_javascript.py  demo_javascript_session.py  demo_session_workflow.py  employees.csv  llms.txt  pyproject.toml  requirements.txt  test_copy_debug.py  test_data.json  test_jsonschema.py  test_mcp_basic.py  test_new_packages.py  test_quickjs_api_discovery.py  test_quickjs_file_api.py  test_results.txt  test_sandbox_utils_basic.py  test_vendored_packages_simple.py
.github/: copilot-instructions.md
config/: mcp.toml  policy.toml
docs/: ADDING_NEW_RUNTIMES.md  DEV_VS_PROD_MCP.md  ERROR_GUIDANCE.md  FUEL_BUDGETING.md  JAVASCRIPT_CAPABILITIES.md  JAVASCRIPT_STATE_PERSISTENCE.md  JS_AUGMENT.md  LLM_PROMPT_TEMPLATES.md  MCP_INTEGRATION.md  MCP_JAVASCRIPT_USAGE.md  PUBLISHING.md  PYPI_CHECKLIST.md  PYTHON_CAPABILITIES.md  UV_PUBLISHING_QUICK_REF.md  VENDOR_MOUNT_OPTIMIZATION.md
examples/: demo.py  demo_javascript.py  demo_javascript_session.py  demo_javascript_stateful.py  demo_session_workflow.py  demo_stateful_execution.py  llm_wasm_mcp.py  mcp_claude_desktop_config.json  mcp_custom_security.py  mcp_http_example.py  mcp_stdio_example.py  sandbox.py
mcp_server/: __init__.py  __main__.py  audit.py  config.py  metrics.py  rate_limiter.py  security.py  server.py  sessions.py  transports.py
openspec/: project.md
sandbox/: __init__.py  host.py  policies.py  py.typed  runtime_paths.py  sessions.py  state.py  state_js.py  utils.py  vendor.py
scripts/: apply_comment_standards.py  fetch_quickjs.ps1  fetch_wlr_python.ps1  fix_lifecycle_test.py  manage_vendor.py  publish.ps1  run-mcp-dev.ps1  test_mcp_path.py  test_package_imports.py  (+2 more)
(+155 files in other folders)
